-
Bug
-
Resolution: Done
-
P1: Critical
-
5.9.0, 5.9.1
-
Windows 10 Pro, 64Bit
VC++ 2015 64bit
-
343e281f0e7cc7fd9e1558e4d92f5019fa565181
The DSEngine crashes very often if the camera (QCamera) stops. It crashes in dscamerasession.cpp, line 537 (DSCameraSession::onFrameAvailable()). The 'buffer' passed to the slot is invalid and it failes on QByteArray inicialization. I'm sending a screenshot from QT Creator in debugger mode.
It is suspicious the DSCameraSession is in state of LoadedStatus while it is receiving new frame (slot onFrameAvailable()).

- relates to
-
QTBUG-64624 Switching from one QCameraViewFinder to another using 'QCamera::setViewFinder()' causes a crash sometimes
-
- Closed
-